<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环信移动客服</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_first">环信移动客服</string>
    <string name="key_error">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="Network_error">网络出错</string>
    <string name="now_location">正在确定你的位置...</string>
    <string name="text_fahuo">你们多久可以发货?</string>
    <string name="text_weight">这个我应该穿什么号的？我身高165，体重46kg</string>
    <string name="text_color">还有其他颜色的吗?</string>
    <string name="text_kuaidi">你们发的是什么快递?</string>
    <string name="not_get_location">无法获取到您的位置信息！</string>
    <string name="sd_not_find">SD卡不存在，不能拍照</string>
    <string name="not_find_image">找不到图片</string>
    <string name="is_clear_mes">是否清空所有聊天记录</string>
    <string name="cant_chat_with_yourself">不能和自己聊天</string>
    <string name="not_find_file">文件不存在</string>
    <string name="The_files_cant_be_too_large">文件不能大于10M</string>
    <string name="send_voice_need_sd">发送语音需要sdcard支持！</string>
    <string name="recording_time_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="not_setting">未设置</string>
    <string name="Upload_the_log">上传日志中...</string>
    <string name="Upload_the_log_successful">日志上传成功</string>
    <string name="Upload_the_log_failure">log上传失败</string>
    <string name="system_is_regist">系统正在自动为您注册用户...</string>
    <string name="is_contact_customer">正在联系客服，请稍等...</string>
    <string name="is_contact_customer_failure">联系客服失败...</string>
    <string name="is_contact_customer_failure_seconed">联系客服失败:</string>
    <string name="sure_restart"> 确定重启？</string>
    <string name="setting_need_restart">重新设置配置后该应用需要手动重启，确定吗？</string>
    <string name="determine">确定</string>
    <string name="cancle">取消</string>
    <string name="download_image">下载图片: 0%</string>
    <string name="download_image_second">下载图片:</string>
    <string name="send_image_follow">发送以下图片？</string>
    <string name="shopping">商城</string>
    <string name="setting">设置</string>
    <string name="register">注册</string>
    <string name="log">登陆</string>
    <string name="password">密码</string>
    <string name="user_name">用户名</string>
    <string name="not_connect_server">不能连接到服务器</string>
    <string name="customernumber"> IM服务号</string>
    <string name="connect_customer"> 联系客服</string>
    <string name="feedback"> 意见反馈</string>
    <string name="save_setting">保存配置</string>
    <string name="history_record">历史记录</string>
    <string name="title_activity_shop_details">ShopDetailsActivity</string>
     <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
     <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
	<string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="set_nick">设置昵称</string>
    <string name="login_user_nick">登录用户昵称</string>
    <string name="customer_account">客服账号</string>
    <string name="appkey">AppKey</string>
    <string name="pop_pre_sales">售前客服</string>
    <string name="pop_after_sales">售后客服</string>
    <string name="tip_wating">请稍等...</string>
    <string name="tip_request_fail">请求失败</string>
    <string name="title_satifisfaction_eval">满意度评价</string>
    <string name="nick_service">客服昵称</string>
    <string name="tip_eval">请对我的服务做出评价</string>
    <string name="hint_leave_message">留言</string>
    <string name="tip_btn_sumbit">提交</string>
    <string name="tip_btn_evaluation">立即评价</string>
</resources>