<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical" >

    <TextView 
        android:background="#ED5485"
        android:id="@+id/btn_image_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/setting"/>
    
    <RelativeLayout 
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_image_title"
        android:id="@+id/ll_setting_list_appkey"
        android:background="#FFFFFF"
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:onClick="startAppKeyedit"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/textview_appkey"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:text="AppKey  "
            android:textColor="#000000"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_setting_appkey"
            android:layout_toRightOf="@id/textview_appkey"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp"
            android:singleLine="true"
            android:textSize="17sp"
            android:textColor="#9B9B9B"
            android:gravity="center_vertical"
            android:text="sipsoft#sandbox"
			/>
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/btn_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="#D6D5DB" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="#D6D5DB" />

    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_marginTop="20dp"
        android:id="@+id/ll_setting_list_zhanghao"
        android:background="#FFFFFF"
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/textview_accountnumber"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:text="@string/customernumber"
            android:textColor="#000000"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_setting_zhanghao"
            android:layout_toRightOf="@id/textview_accountnumber"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:textColor="#9B9B9B"
            android:text="yuanhui"
			/>
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/btn_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="#D6D5DB" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="#D6D5DB" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_marginTop="20dp"
        android:id="@+id/ll_setting_list_customer"
        android:background="#FFFFFF"
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:onClick="contactCustomer"
        android:orientation="horizontal">
        <TextView 
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:text="@string/feedback"
            android:textColor="#000000"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/imageview_back"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/btn_back" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="#D6D5DB" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="#D6D5DB" />
    </RelativeLayout>
    
    <!-- <RelativeLayout 
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_setting_list_zhanghao"
        android:id="@+id/ll_setting_list_customer"
        android:background="#FFFFFF"
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:onClick="contactCustomer"
        android:orientation="horizontal">
        <TextView 
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/connect_customer"
            android:textColor="#000000"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/imageview_back"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_back" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="#CBC7CC" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="#CBC7CC" />
    </RelativeLayout> -->
    
    
    <!-- <RelativeLayout 
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_setting_list_customer"
        android:background="#FFFFFF"
        android:layout_height="44dp"
        android:layout_width="match_parent">
	    <Button 
	        android:layout_below="@id/ll_setting_list_customer"
	        android:id="@+id/button1"
	        android:background="#FD5400"
	        android:layout_height="44dp"
	        android:layout_width="match_parent"
	        android:onClick="contactCustomer"
	        android:text="@string/save_setting"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:textColor="#FFFFFF"
	        android:orientation="horizontal">
	    </Button>
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:layout_alignParentTop="true"
	        android:background="#CBC7CC"/>
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:layout_alignParentBottom="true"
	        android:background="#CBC7CC"/>
    </RelativeLayout> -->
    
</LinearLayout>