<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC" >

    <RelativeLayout
        android:id="@+id/shop_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#ED5485" >

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_record"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btn_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/shopping"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/connect_customer"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </RelativeLayout>

    <!--
         <WebView 
        android:layout_below="@+id/btn_image_title"
        android:id="@+id/webView"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"/>
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shop_title"
         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            
             >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:orientation="vertical" >
                    <ImageButton
                        android:id="@+id/ib_shop_imageone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="center"
                        android:src="@drawable/em_example_image_1" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2015早春新款高腰复古牛仔裙"
                        android:textColor="#000000"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" ￥ 128"
                        android:textColor="#CC0033"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:orientation="vertical" >
                    <ImageButton
                        android:id="@+id/ib_shop_imagetwo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="center"
                        android:src="@drawable/em_example_image_2" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="露肩名媛范套装"
                        android:textColor="#000000"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" ￥ 518"
                        android:textColor="#CC0033"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/ib_shop_imagethree"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="center"
                        android:src="@drawable/em_example_image_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="假两件衬衣+V领毛衣上衣"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" ￥ 235"
                        android:textColor="#CC0033"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/ib_shop_imagefour"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:scaleType="center"
                        android:src="@drawable/em_example_image_4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="插肩棒球衫外套"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" ￥ 162"
                        android:textColor="#CC0033"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>